[gd_scene load_steps=4 format=3 uid="uid://candx65meavuq"]

[ext_resource type="PackedScene" uid="uid://b86pjqcwqvq5" path="res://Game (movements, npcs, world map, inventory)/Scenes/EndOfDayPopUp(parts)/Scenes/EndOfDayPanel.tscn" id="1_o6mww"]
[ext_resource type="Script" path="res://Game (movements, npcs, world map, inventory)/Scripts/EndOfDayPopUp.gd" id="1_rpklx"]
[ext_resource type="PackedScene" uid="uid://bl354ud7gf85f" path="res://Game (movements, npcs, world map, inventory)/Scenes/EndOfDayPopUp(parts)/Scenes/ContinueButton(EOD).tscn" id="2_rpklx"]

[node name="EndOfDayPopUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rpklx")

[node name="EndOfDayPanel" parent="." instance=ExtResource("1_o6mww")]
layout_mode = 1
offset_left = -168.192
offset_top = 712.8
offset_right = -168.192
offset_bottom = 712.8

[node name="VBoxContainer" type="VBoxContainer" parent="EndOfDayPanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 296.0
offset_bottom = 304.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="EndOfDayPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "DAY COMPLETED!"
horizontal_alignment = 1

[node name="RevenueLabel" type="Label" parent="EndOfDayPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
text = "Total Revenue: $"

[node name="ExpenseLabel" type="Label" parent="EndOfDayPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
text = "Total Expenses: $"

[node name="ProfitLabel" type="Label" parent="EndOfDayPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
text = "Total Profits: $"

[node name="CurrentLabel" type="Label" parent="EndOfDayPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.266667, 0.4, 1)
text = "Current Budget: $"

[node name="ContinueButton(eod)" parent="." instance=ExtResource("2_rpklx")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 104.0
offset_top = 248.0
offset_right = 232.0
offset_bottom = 280.0
